# dither-lib

./: Cargo.toml
.github/workflows/: ci.yml
src/: dither.rs  lib.rs  main.rs
