[package]
name = "dither-lib"
version = "0.1.2"
edition = "2021"
description = "Simple image dithering library"
license = "MIT"
homepage = "https://github.com/nathan-teoh/dither-lib"
repository = "https://github.com/nathan-teoh/dither-lib"
readme = false

[dependencies]
image = "0.25.2"
ndarray = "0.16.1"
rand = "0.8.5"
rayon = "1.10.0"
